<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="64dp"
                android:text="@string/log_out_question"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/my_red"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/log_out_true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_sides"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:paddingStart="4dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/yes_override"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/log_out_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/line_progress_background"
                    android:gravity="center"
                    android:paddingStart="4dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/no_override"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>